<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/ic_booking"
        android:title="@string/navigation_event_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_article"
        android:title="@string/navigation_article_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/navigation_profile_title"
        app:showAsAction="always" />
</menu>
