<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.HomeActivity">


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="16dp"
        android:text="@string/welcome_to_sportspot"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/deskirpsi_sportspot"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_maps"
            android:layout_width="64dp"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableLeft="@drawable/ic_map"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/select_sport_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pilih_olahraga"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text" />

    <LinearLayout
        android:id="@+id/sport_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/select_sport_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/button_futsal"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg"
            android:drawableLeft="@drawable/ic_ball"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/futsal"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_badminton"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:text="@string/badminton"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_badminton"
            android:background="@drawable/button_bg"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/button_basketball"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/button_bg"
            android:drawableLeft="@drawable/ic_basket"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/basket"
            android:textColor="@color/black" />

    </LinearLayout>


    <TextView
        android:id="@+id/recommendation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rekomendasi_lapangan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sport_buttons_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_recommendation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/recommendation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_row" />

</androidx.constraintlayout.widget.ConstraintLayout>
